<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.gridlayout.widget.GridLayout
        android:layout_width="match_parent"
        app:columnCount="1"
        android:horizontalSpacing="5dp"
        android:verticalSpacing="5dp"
        android:layout_margin="10dp"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="190dp"
            app:layout_column="0"
            android:weightSum="1"
            >
            <Button
                android:id="@+id/mealPlanButton"
                android:layout_width="0dp"
                android:layout_weight=".5"
                android:layout_marginRight="5dp"
                android:layout_height="match_parent"
                android:backgroundTint="#FF5722"
                android:onClick="showMealPlan"
                android:text="@string/mealPlanButton"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="#654321"
               />
            <Button
                android:id="@+id/favouriteRecipesButton"
                android:layout_width="0dp"
                android:layout_weight=".5"
                android:layout_marginLeft="5dp"
                android:layout_height="match_parent"
                android:backgroundTint="#FF9800"
                android:onClick="showFavouriteRecipes"
                android:text="@string/favouriteRecipesButton"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="#654321"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="190dp"
            app:layout_column="0"
            android:weightSum="1"
            >
        <Button
            android:id="@+id/currentItemsButton"
            android:layout_width="0dp"
            android:layout_weight=".5"
            android:layout_height="match_parent"
            android:backgroundTint="#FF9800"
            android:onClick="showCurrentGroceries"
            android:text="@string/currentItemsButton"
            android:textSize="18sp"
            android:layout_marginRight="5dp"
            android:textStyle="bold"
            android:textColor="#654321" />
        <Button
            android:id="@+id/availableRecipesButton"
            android:layout_width="0dp"
            android:layout_weight=".5"
            android:layout_marginLeft="5dp"
            android:layout_height="match_parent"
            android:backgroundTint="#FF5722"
            android:onClick="showPrivacyPolicy"
            android:text="Privacy Policy"
            android:textStyle="bold"
            android:textColor="#654321"
           />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="190dp"
            app:layout_column="0"
            android:weightSum="1"
            >
        <Button
            android:id="@+id/shoppingListButton"
            android:layout_width="0dp"
            android:layout_weight=".5"
            android:layout_height="match_parent"
            android:backgroundTint="#FF5722"
            android:onClick="showShoppingList"
            android:text="@string/shoppingListButton"
            android:textSize="18sp"
            android:layout_marginRight="5dp"
            android:textStyle="bold"
            android:textColor="#654321"
            />

        <Button
            android:id="@+id/findRecipesButton"
            android:layout_width="0dp"
            android:layout_weight=".5"
            android:layout_height="match_parent"
            android:backgroundTint="#FF9800"
            android:onClick="showPrivacyStatement"
            android:text="Privacy Statement"
            android:textSize="18sp"
            android:layout_marginLeft="5dp"
            android:textStyle="bold"
            android:textColor="#654321"
           />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="190dp"
            app:layout_column="0"
            android:weightSum="1"
            >
        <Button
            android:id="@+id/forumButton"
            android:layout_width="0dp"
            android:layout_weight=".5"
            android:layout_height="match_parent"
            android:backgroundTint="#FF9800"
            android:onClick="showForum"
            android:text="@string/forumButton"
            android:textSize="18sp"
            android:layout_marginRight="5dp"
            android:textStyle="bold"
            android:textColor="#654321"
            tools:ignore="TextContrastCheck" />
        <Button
            android:id="@+id/addRecipeButton"
            android:layout_width="0dp"
            android:layout_weight=".5"
            android:layout_height="match_parent"
            android:backgroundTint="#FF5722"
            android:onClick="addRecipe"
            android:text="@string/addRecipeButton"
            android:layout_marginLeft="5dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#654321"
            />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="190dp"
            app:layout_column="0"
            android:weightSum="1"
            >
            <Button
                android:id="@+id/videoButton"
                android:layout_width="0dp"
                android:layout_weight=".5"
                android:layout_height="match_parent"
                android:backgroundTint="#FF9800"
                android:onClick="showVideos"
                android:text="Watch Videos"
                android:textSize="18sp"
                android:layout_marginRight="5dp"
                android:textStyle="bold"
                android:textColor="#654321"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>
    </androidx.gridlayout.widget.GridLayout>
</ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>

